Replace `jdk.internal.misc.SharedSecrets` impl with native JNI method `getPosixFD`.