@@ -563,19 +563,9 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>${maven-compiler-plugin.version}</version>
 					<configuration>
-
-						<!-- TODO :: ENABLE BUILD FOR JDK 11 RELEASE -->
-						<!--<release>${java.version}</release>-->
-
 						<showDeprecation>true</showDeprecation>
 						<showWarnings>true</showWarnings>
 						<verbose>false</verbose>
-
-						<compilerArgs>
-							<!-- TODO :: ELIMINATE JDK INTERNAL REFS -->
-							<arg>--add-exports</arg><arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
-							<arg>--add-exports</arg><arg>java.base/jdk.internal.ref=ALL-UNNAMED</arg>
-						</compilerArgs>
 					</configuration>
 				</plugin>
 
